@@ -1,65 +1,66 @@
-# ![RealWorld Example App](logo.png)
+# TodoList Application
 
-> ### Spring Data + Couchbase codebase containing real world examples (CRUD, auth, advanced patterns, etc) that adheres to the [RealWorld](https://github.com/gothinkster/realworld) spec and API.
+> ### Spring Data + Couchbase + Spring Security + Spring Boot + Swagger
 
-### [Demo](https://demo.realworld.io/)&nbsp;&nbsp;&nbsp;&nbsp;[RealWorld](https://github.com/gothinkster/realworld)
+## Overview
+This application is a simple Todo List Application created for demonstration purposes. It uses Spring Boot, Spring Data, Couchbase, Spring Security, and Swagger for API documentation.
+
+## Prerequisites
+- Java 17
+- Maven
+- Docker (for running Couchbase Server)
 
 
-This codebase was created to demonstrate a realworld backend application built with **Spring Data Couchbase** including CRUD operations, authentication, routing, pagination, and more. For more information on how to this works with other frontends/backends, head over to the [RealWorld](https://github.com/gothinkster/realworld) repo.
-
-# Getting started
-
-This Project requries Java 17, Maven, and a running Couchbase Server instance. See the Setup Couchbase section for more details.
-
-## Configuration
-
-This project needs a configured Couchbase configuration to run properly. There are different ways you can do it. Provide a properties file with the following content:
 
 ```properties
 couchbase.connectionString=couchbase://localhost
 couchbase.username=Administrator
 couchbase.password=password
-couchbase.defaultBucket=default
-couchbase.defaultScope=_default
+couchbase.bucketName=todo
+couchbase.scopeName=_default
 ```
 
-or make sure you have the following environment variables configured:
+## Running the Application
+### Using Maven
+1. Navigate to the project directory.
+2. Run the application:
+   `mvn spring-boot:run`
+
+
+## Running Tests
+To run the unit tests, use the following Maven command:
+`
+mvn test
+`
+## Build your app
+To build the application, use the following Maven command:
+`
+mvn clean install
+`
+## Run the test suite
+To run the test suite, use the following Maven command:
+`
+mvn test
+`
+
+## Run your app with dependencies
+To run your Spring Boot application with dependencies, use the following Maven command:
+`
+mvn spring-boot:run
+`
+If you need to specify a particular profile, you can use the <span style="color:red">-P</span> flag followed by the profile name. You can find three profiles. For example, to run the application with the <span style="color:red">unit-tests</span> profile:
+
+1. Run `mvn spring-boot:run -Punit-tests`
+2. Run `mvn spring-boot:run -Pintegration-tests`
+3. Run `mvn spring-boot:run -Pall-tests`
 ```
-export COUCHBASE_CONNECTIONSTRING=couchbase://localhost
-export COUCHBASE_USERNAME=Administrator
-export COUCHBASE_PASSWORD=password
-export COUCHBASE_DEFAULTBUCKET=default
-export COUCHBASE_DEFAULTSCOPE=_default
+mvn spring-boot:run -Punit-tests
 ```
 
-### Test Configuration
+## API Documentation
 
-To run the postman test, you need to setup the following environment variables:
+API documentation is available via Swagger UI. Once the application is running, you can access it at:
+> **Link : http://localhost:8080/swagger-ui.html**
 
-```
-APIURL=http://localhost:8080/api
-USERNAME=username
-EMAIL=useremail@domain.com
-PASSWORD=userPass
-```
-
-## Run
-### mdögmdklgmgkgkm
-1. Run `mvn package` in the project folder to build the project
-1. Run `java --add-opens java.base/java.lang=ALL-UNNAMED -jar target/*.jar`
-2. Run `./postman/run-api-tests.sh` to run Postman collection tests
-
-The reason we need to add the `--add-opens java.base/java.lang=ALL-UNNAMED` parameters can be found on this article: https://www.springcloud.io/post/2022-07/inaccessibleobjectexception/
-
-## Setup Couchbase
-
-There are multiple ways to create a Couchbase instance.
-
-### Using Docker
-
-You can use our [official Docker image](https://hub.docker.com/_/couchbase) by running `docker run -d --name db -p 8091-8097:8091-8097 -p 9123:9123 -p 11207:11207 -p 11210:11210 -p 11280:11280 -p 18091-18097:18091-18097 couchbase`
-Then you can go to http://localhost:8091 and start setting up your cluster. Take a look at the hub page for more details.
-
-### Using Couchbase Capella
-
-Go to https://cloud.couchbase.com. From there you can setup a trial account and get a 30days free instance, no Credit Card required. Check out our getting started here:
+## Couchbase UI
+> **Link : http://localhost:8091/**
